--- a/pfm_react_frontend/src/App.css
+++ b/pfm_react_frontend/src/App.css
@@ -28,11 +28,8 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.chart-container {
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
 }
